# ttun-client

./: .gitignore  .pre-commit-config.yaml  .prettierignore  LICENSE  MANIFEST.in  README.rst  build_requirements.txt  dev_requirements.txt  index.html  package.json  pyproject.toml  requirements.txt  setup.cfg  tsconfig.json  vite.config.mjs
.github/workflows/: python-publish.yml
src/: index.scss  index.tsx  types.ts  utils.ts
src/components/App/: App.module.scss  App.tsx
src/components/Content/: Content.module.scss  Content.tsx
src/components/Details/: Details.module.scss  Details.tsx
src/components/Frames/: Frames.module.scss  Frames.tsx
src/components/Icons/: Filter.tsx  Moon.tsx  Sliders.tsx  Sun.tsx  Trash.tsx
src/components/RequestDetails/: RequestDetails.module.scss  RequestDetails.tsx
src/components/RequestList/: RequestList.module.scss  RequestList.tsx
src/components/RequestSummary/: RequestSummary.module.scss  RequestSummary.tsx
src/contexts/: Connection.tsx  DarkMode.tsx  Settings.tsx
src/hooks/: useDarkMode.tsx  useRequests.tsx
ttun/: __init__.py  __main__.py  client.py  inspect_server.py  pubsub.py  settings.py  types.py
