[metadata]
name = ttun
author = Tom van der Lee
description = Expose a localport via you selfhosted TTUN Server
long_description = file: README.rst
license = BSD-3-Clause

[options]
include_package_data = True
packages = find:
install_requires =
    websockets ~= 10.0
    aiohttp ~= 3.8
    appdirs ~= 1.4

[options.entry_points]
console_scripts =
    ttun = ttun.__main__:main
