[metadata]
name = ttun
author = Tom van der Lee
description = Expose a local port via your selfhosted TTUN Server
long_description = file: README.rst
license = BSD-3-Clause

[options]
include_package_data = True
packages = find:
install_requires =
    websockets ~= 10.0
    aiohttp[speedups] ~= 3.8
    appdirs ~= 1.4

[options.entry_points]
console_scripts =
    ttun = ttun.__main__:main
